Matrix.cppresult.txt
In file included from cur.cpp:16:0:
ruslan/Matrix.cpp:273:1: error: unterminated comment
 /*int main()
 ^
./check.sh: line 24: ./a.out: No such file or directory
